@@ -2,8 +2,9 @@ package com.monaum.Rapid_Global.module.incomes.sales;
 
 import com.monaum.Rapid_Global.annotations.RestApiController;
 import com.monaum.Rapid_Global.enums.OrderStatus;
-import com.monaum.Rapid_Global.enums.Status;
 import com.monaum.Rapid_Global.model.NumberToWordsUtil;
+import com.monaum.Rapid_Global.module.incomes.sales.pdf.SalesEmailService;
+import com.monaum.Rapid_Global.module.incomes.sales.pdf.SalesInvoiceReportService;
 import com.monaum.Rapid_Global.util.response.BaseApiResponseDTO;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,9 +17,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestApiController
 @RequestMapping("/api/sales")
@@ -26,6 +24,7 @@ public class SalesController {
 
     @Autowired private SalesService service;
     @Autowired private SalesInvoiceReportService reportService;
+    @Autowired private SalesEmailService emailService;
 
     private static final DateTimeFormatter DATE_FORMATTER =
             DateTimeFormatter.ofPattern("dd-MMM-yyyy");
@@ -68,30 +67,40 @@ public class SalesController {
         return service.updateStatus(id, OrderStatus.CANCELLED, reason);
     }
 
+    @PostMapping("/{id}/invoice/email")
+    public ResponseEntity<BaseApiResponseDTO<?>> emailInvoice(
+            @PathVariable Long id,
+            @RequestParam String email) {
+
+        SalesResDto sales = service.getById(id);
+        emailService.sendInvoiceEmail(sales, email);
+
+        BaseApiResponseDTO<String> response = new BaseApiResponseDTO<>();
+        response.setSuccess(true);
+        response.setMessage("Invoice emailed successfully");
+        return ResponseEntity.ok(response);
+    }
+
 
     @GetMapping("/{id}/invoice")
     public ResponseEntity<byte[]> downloadInvoice(@PathVariable Long id) {
 
-        // Fetch sales data
         SalesResDto sales = service.getById(id);
 
-        // Convert total amount to words
         String amountInWords = NumberToWordsUtil.convert(sales.getTotalAmount());
 
-        // Map SalesResDto to SalesInvoiceJasperDto
         SalesInvoiceJasperDto invoiceDto = new SalesInvoiceJasperDto();
-
-        // Set header information
         invoiceDto.setInvoiceNo(sales.getInvoiceNo());
         invoiceDto.setCustomerName(sales.getCustomerName());
         invoiceDto.setPhone(sales.getPhone());
         invoiceDto.setAddress(sales.getAddress());
-        invoiceDto.setSellDate(sales.getSellDate() != null ?
-                sales.getSellDate().format(DATE_FORMATTER) : "");
-        invoiceDto.setDeliveryDate(sales.getDeliveryDate() != null ?
-                sales.getDeliveryDate().format(DATE_FORMATTER) : "");
+        invoiceDto.setSellDate(
+                sales.getSellDate() != null ? sales.getSellDate().format(DATE_FORMATTER) : ""
+        );
+        invoiceDto.setDeliveryDate(
+                sales.getDeliveryDate() != null ? sales.getDeliveryDate().format(DATE_FORMATTER) : ""
+        );
 
-        // Set financial information
         invoiceDto.setSubTotal(sales.getSubTotal());
         invoiceDto.setDiscount(sales.getDiscount());
         invoiceDto.setVat(sales.getVat());
@@ -100,34 +109,33 @@ public class SalesController {
         invoiceDto.setDueAmount(sales.getDueAmount());
         invoiceDto.setAmountInWords(amountInWords);
 
-        // Map SalesItemResDto to SalesInvoiceItemDto
-        List<SalesInvoiceJasperDto.SalesInvoiceItemDto> invoiceItems = new ArrayList<>();
-        if (sales.getItems() != null && !sales.getItems().isEmpty()) {
-            invoiceItems = sales.getItems().stream()
-                    .map(item -> new SalesInvoiceJasperDto.SalesInvoiceItemDto(
-                            item.getItemName(),
-                            item.getUnitName(),
-                            item.getQuantity(),
-                            item.getUnitPrice(),
-                            item.getTotalPrice()
-                    ))
-                    .collect(Collectors.toList());
-        }
-        invoiceDto.setItems(invoiceItems);
+        invoiceDto.setItems(
+                sales.getItems().stream()
+                        .map(item -> new SalesInvoiceJasperDto.SalesInvoiceItemDto(
+                                item.getItemName(),
+                                item.getUnitName(),
+                                item.getQuantity(),
+                                item.getUnitPrice(),
+                                item.getTotalPrice()
+                        ))
+                        .toList()
+        );
 
-        // Generate PDF
         byte[] pdfBytes = reportService.generateInvoice(invoiceDto);
 
-        // Prepare response headers
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_PDF);
-        headers.setContentDispositionFormData("attachment",
-                "invoice_" + sales.getInvoiceNo() + ".pdf");
+
+        // ✅ INLINE + correct filename
+        headers.set(HttpHeaders.CONTENT_DISPOSITION,
+                "inline; filename=\"" + sales.getInvoiceNo() + ".pdf\"");
+
         headers.setContentLength(pdfBytes.length);
 
         return ResponseEntity.ok()
                 .headers(headers)
                 .body(pdfBytes);
     }
+
 
 }
